# TradeMatch

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/client/: ClientInterface.cpp  ClientInterface.h
src/engine/: Exchange.cpp  Exchange.h  Logger.cpp  Logger.h  OrderBook.cpp  OrderBook.h  Trade.cpp  Trade.h  order.cpp  order.h  order_book.cpp  order_book.h
